src/objects/Customer_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Feedbacks</relationshipLabel>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Customer Feedbacks</relationshipLabel>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Experience__c</fullName>
        <label>Team Member Experience</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Feedbacks</relationshipLabel>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Quality__c</fullName>
        <label>Property Quality</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Bad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Customer Feedbacks</relationshipLabel>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Viewing_Id__c</fullName>
        <label>Viewing Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>